# resize-img-script

./: README.md  pyproject.toml
resize_img_script/: __main__.py
